@@ -1,3 +1,9 @@
+Fri Oct 12 01:43:25 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (format_display_and_save, format_display,
+	  display_catman): Only discard stderr from formatting processes if
+	  stdout is a terminal.
+
 Fri Oct 12 01:32:52 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/encodings.c (device_table): groff's ascii device only supports
